--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </div>  
                     <div class="  col-sm-12 col-md-6 p-md-0 px-md-1 px-lg-1"> 
                        <div class="relative">
-                            <h1 class="text-center  px-4 py-sm-5 py-md-0 px-sm-5 px-md-3  text-md-start px-md-5">
+                            <h1 class="text-center py-4  px-4 py-sm-5 py-md-0 px-sm-5 px-md-3  text-md-start px-md-5">
                                 <b class="">
                                      Get <span class="pink">insite</span> that <br>help your Business <br>grow
                                 </b>
